Mail reneration fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,14 +41,14 @@
           headroom.init()
           draw()
 
-          (function generateMail() {
+          ;(function generateMail() {
             ML="=mvi\".ae:/pf>nuo@t<hxl r";
             MI="B6FCG7;04163EA?83=;?@:3D7E26E>753?4<3=;?@:3D7E26E>753?B96<";
             OT="";
             for(j=0;j<MI.length;j++){
               OT+=ML.charAt(MI.charCodeAt(j)-48);
             }
-            document.querySelector('.content-mailer').innerHTML = OT;
+            document.querySelector('.content--mailer').innerHTML = OT;
           }())
         })
 
