New Favicon, Logo animation, Mobile first markup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,13 @@
 <header>
-  <a href="#" class="logo"></a>
+  <a href="#" class="logo">
+    <div class="logo--text">
+      <span class="logo--text__text-top">Pixel</span>
+      <span class="logo--text__text-bottom">Value</span>
+    </div>
+    <div id="bucket" class="logo--container"><img class="logo--container__img" src="/assets/Logo-static-fixed.svg"/></div>
+  </a>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>
+  <script src="/js/main.js" type="text/babel"></script>
 </header>
