Favicon inclusion into layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>{{ page.title }}</title>
-
+    {% include favicon.html %}
     <meta property="og:url" content="{{ site.url }}">
     <meta property="og:site_name" content="Pixel Value">
     <meta property="og:image" content="{{ site.url }}{{ site.og_image }}"/>
