Fix for BTGothinc font selector after load

--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ footer {
     padding-left: 20px;
   }
 
-  .font-EngraversGothicBT-loaded .logo-text {
+  .font-EngraversGothicBT-loaded .logo--text {
     font-family: "EngraversGothicBT", sans-serif;
   }
 
