--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,58 @@
 <footer>
-  <div class="footer--copyright">@copyright PixelValue</div>
+  {% comment %}
+  <!-- Social Links -->
+  <div class="bloc bgc-white l-bloc" id="bloc-13">
+  	<div class="container bloc-lg">
+  		<div class="row">
+  			<div class="col-sm-12 col-md-6 col-md-offset-3">
+  				<div class="col-xs-3">
+  					<div class="text-center">
+  						<a class="social" href="https://twitter.com/pixel_value"><span class="fa fa-twitter icon-md"></span></a>
+  					</div>
+  				</div>
+  				<div class="col-xs-3">
+  					<div class="text-center">
+  						<a class="social" href="https://www.facebook.com/pixelvalue"><span class="fa fa-facebook icon-md"></span></a>
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <!-- Social Links END -->
+  {% endcomment %}
+
+  <!-- Subscribe email -->
+  <div class="bloc d-bloc subscribe-block bgc-white">
+  	<div class="container bloc-xl">
+  		<div class="row">
+  			<div class="col-sm-12">
+  				<div class="row">
+  					<div class="col-sm-12">
+  						<div class="text-center">
+  							<a href="#subscribe" class="btn   btn-sq btn-xl btn-dark-jungle-green">
+                  <span class="fa fa-envelope icon-spacer icon-white icon-sm">
+                  </span> Subscribe for news</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <!-- Subscribe email END -->
+
+  <!-- Footer  -->
+  <div class="bloc tc-white bgc-dark-jungle-green">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-sm-12">
+  				<h4 class="text-center footer--copyright">
+  					© PixelValue inc. 2016
+  				</h4>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <!-- Footer END -->
 </footer>
