--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,64 +16,41 @@
 
     <meta name="description" content="{{ page.description }}">
 
+    <link href="/css/bootstrap.css"  rel="stylesheet"/>
+    <link href="/css/font-awesome.min.css"  rel="stylesheet"/>
     <link href="/css/main.css"  rel="stylesheet"/>
-
-    <!-- this font loading polifill inculdes polifill for promises too-->
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lustria&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <div class="page-container">
+      {{ content }}
+      {% include scroll2top.html %}
+      {% include footer.html %}
+    </div>
+    {% include metrics.html %}
+    {% include background.js.html %}
+    {% include errortracking.js.html %}
+    <!-- this font loading polyfill includes polyfill for promises also-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fontfaceobserver/2.0.5/fontfaceobserver.js"></script>
     <script>
       (function () {
-        (new FontFaceObserver('aaarghnormal')).load().then(() => {
-          document.documentElement.className += " font-aaarghnormal-loaded";
-        });
-        (new FontFaceObserver('EngraversGothicBT')).load().then(() => {
-          document.documentElement.className += " font-EngraversGothicBT-loaded";
+        let notify = (e) => {
+          console.log(e)
+        };
+        ['EngraversGothicBT', 'Lato', 'Lustria'].forEach(n => {
+          let ffo = new FontFaceObserver(n);
+          ffo.load().then(() => {
+            document.documentElement.className += " font-EngraversGothicBT-loaded";
+          }).catch(e => notify(e))
         })
       }())
     </script>
-  </head>
-  <body>
-    {% include header.html %}
-    <div class="content">
-    {{ content }}
-    </div>
-    {% include footer.html %}
-    {% include metrics.html %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.4.0/trianglify.min.js"></script>
-    <script src="https://unpkg.com/headroom.js"></script>
-    <script>
-      (function () {
-        var triangilifier, headroom;
-
-        function draw() {
-          var imagePath = 'url(\'' + triangilifier.png() + '\')';
-          document.body.style.backgroundImage = imagePath;
-        }
-
-        document.addEventListener('DOMContentLoaded', function () {
-          triangilifier = Trianglify({
-              width: window.innerWidth,
-              height: window.innerHeight,
-              x_colors: ["#023858", "#045a8d", "#0570b0", "#a6bddb", "#74a9cf", "#3690c0", "#0570b0", "#045a8d", "#023858"],
-              y_colors: "match_x"
-          });
-
-          headroom = new Headroom(document.querySelector('header'), { tolerance: 100 });
-          headroom.init()
-          draw()
-
-          ;(function generateMail() {
-            ML="=mvi\".ae:/pf>nuo@t<hxl r";
-            MI="B6FCG7;04163EA?83=;?@:3D7E26E>753?4<3=;?@:3D7E26E>753?B96<";
-            OT="";
-            for(j=0;j<MI.length;j++){
-              OT+=ML.charAt(MI.charCodeAt(j)-48);
-            }
-            document.querySelector('.content--mailer').innerHTML = OT;
-          }())
-        })
-
-
-      })()
-    </script>
+    <script src="js/jquery-2.1.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/blocs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>
+    <script src="js/main.js" type="text/babel"></script>
   </body>
 </html>
