--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,9 +30,10 @@
   				<div class="row">
   					<div class="col-sm-12">
   						<div class="text-center">
-  							<a href="#subscribe" class="btn   btn-sq btn-xl btn-dark-jungle-green">
-                  <span class="fa fa-envelope icon-spacer icon-white icon-sm">
-                  </span> Subscribe for news</a>
+  							<a href="#subscribe" class="btn btn-sq btn-lg btn-dark-jungle-green" data-toggle="modal" data-target=".subscribe-modal-sm">
+                  <span class="fa fa-envelope icon-spacer icon-white icon-sm"></span>
+                   Subscribe for news
+                 </a>
   						</div>
   					</div>
   				</div>
@@ -41,6 +42,37 @@
   	</div>
   </div>
   <!-- Subscribe email END -->
+
+  <div class="modal fade subscribe-modal-sm" tabindex="-1" role="dialog" aria-labelledby="emailSubscriptionLabel">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Let's be in touch</h4>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-12 mg-md">
+              <small>
+              We will not spam you, only intresting facts of our work to share with you.
+              </small>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="input-group">
+                 <input type="email" class="form-control" placeholder="mail@example.com" required>
+                 <span class="input-group-btn">
+                   <button class="btn btn-default" type="button">Subscribe</button>
+                 </span>
+               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <!-- Footer  -->
   <div class="bloc tc-white bgc-dark-jungle-green">
