--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="fill-bloc-top-edge header-sticky sticky-nav bgc-smoky-black d-bloc clearfix" id="bloc-0">
+<header class="fill-bloc-top-edge header-sticky sticky-nav d-bloc clearfix" id="bloc-0">
   <div class="container">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -14,7 +14,7 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1 collapse">
+			<div class="collapse navbar-collapse navbar-1" id="main-menu">
 				<ul class="site-navigation nav navbar-nav pull-right">
         {% assign posts = site.posts | sort: 'date'  %}
         {% for post in posts %}
