--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -9,7 +9,7 @@
 					But don't forget about your jazzy tag line.
 				</h3>
 				<div class="text-center">
-					<a href="index.html" class="btn-wire btn btn-xl wire-btn-white">Get Started</a>
+					<a href="#intro" class="btn-wire btn btn-xl wire-btn-white">Get Started</a>
 				</div>
         {% endcomment %}
 			</div>
