--- a/_includes/scroll2top.html
+++ b/_includes/scroll2top.html
@@ -1,5 +1,5 @@
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+<a class="bloc-button btn btn-d scrollToTop scroll-action" data-scroll-target="#landing" href="/">
   <span class="fa fa-chevron-up"></span>
 </a>
 <!-- ScrollToTop Button END-->
