--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="landing-bloc bloc bloc-fill-screen b-parallax bloc-bg-texture texture-darken bg-shutterstock-485402395-2048 bgc-white l-bloc hidden-xs-0" id="bloc-1">
+<div class="landing-bloc bloc bloc-fill-screen b-parallax bloc-bg-texture texture-darken bg-landing bgc-white l-bloc hidden-xs-0" id="bloc-1">
   {% include header.html %}
   {% include landing.html %}
   {{ content }}
