--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 
   <!-- Subscribe email -->
   <div class="bloc d-bloc subscribe-block bgc-white">
-  	<div class="container bloc-xl">
+  	<div class="container bloc-lg">
   		<div class="row">
   			<div class="col-sm-12">
   				<div class="row">
@@ -85,6 +85,25 @@
   			</div>
   		</div>
   	</div>
+  </div>
+  <div class="cookie-policy">
+    <div class="row cookie-policy--description">
+      <div class="col-sm-12">
+        <div class="fa fa-star icon-spacer icon-white icon-sm cookie-policy--icon"></div>
+        We are using cookies to provide statistics that help us give you the best experience of our site.
+        You can find out more or switch them off if you prefer.
+        However, by continuing to use the site without changing settings,
+        you are agreeing to our use of cookies.
+      </div>
+    </div>
+    <div class="row cookie-policy--buttons">
+      <div class="col-sm-8"></div>
+      <div class="col-sm-2 tc-white cookie-policy--agree"> I agree and </div>
+      <div class="col-sm-2">
+        <a class="btn btn-sq btn-xs btn-block wire-btn-white cookie-policy--accept" href="javascript:void(0)">Don't show more</a>
+      </div>
+    </div>
+    <a class="fa fa-times icon-spacer icon-white icon-sm cookie-policy--close-icon" href="javascript:void(0)"></a>
   </div>
   <!-- Footer END -->
 </footer>
