--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,5 +52,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>
     <script src="js/main.js" type="text/babel"></script>
+    <script src="js/jquery.cookie.js"></script>
   </body>
 </html>
